data ingestion added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -245,6 +245,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1Awfd06An549a9JQKJpr_kk1NMXdjMhn_/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1Awfd06An549a9JQKJpr_kk1NMXdjMhn_'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (uriginal): https://drive.google.com/uc?/export=download&id=1Awfd06An549a9JQKJpr_kk1NMXdjMhn_\n",
+      "From (redirected): https://drive.google.com/uc?/export=download&id=1Awfd06An549a9JQKJpr_kk1NMXdjMhn_&confirm=t&uuid=50f1d234-4426-4857-9faf-437560de5743\n",
+      "To: /Users/namujhp/Kidney-Disease-Classification-Deep-Learning-Project/research/kidney-CT-Scan-data.zip\n",
+      "100%|██████████| 57.8M/57.8M [00:00<00:00, 62.5MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'kidney-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gdown\n",
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix + file_id, 'kidney-CT-Scan-data.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
