prepare base model added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -175,9 +175,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-11-02 22:22:05,179: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-11-02 22:22:05,181: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-11-02 22:22:05,183: INFO: common: created directory at: artifacts]\n",
+      "[2023-11-02 22:22:05,183: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-11-02 22:22:05,184: INFO: 2311482115: Downloading data from https://drive.google.com/file/d/1Awfd06An549a9JQKJpr_kk1NMXdjMhn_/view?usp=sharing into file artifacts/data_ingestion_data.zip]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (uriginal): https://drive.google.com/uc?/export=download&id=1Awfd06An549a9JQKJpr_kk1NMXdjMhn_\n",
+      "From (redirected): https://drive.google.com/uc?/export=download&id=1Awfd06An549a9JQKJpr_kk1NMXdjMhn_&confirm=t&uuid=47de982b-caa0-4d09-8ec2-06b8a63c3574\n",
+      "To: /Users/namujhp/Kidney-Disease-Classification-Deep-Learning-Project/artifacts/data_ingestion_data.zip\n",
+      "100%|██████████| 57.8M/57.8M [00:01<00:00, 45.0MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-11-02 22:22:07,437: INFO: 2311482115: Downloaded data from https://drive.google.com/file/d/1Awfd06An549a9JQKJpr_kk1NMXdjMhn_/view?usp=sharing into file artifacts/data_ingestion_data.zip]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
@@ -188,6 +225,13 @@
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
